8390052: Code using 'value' is rejected: invalid method declaration; return type required